[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-do-python"
version = "0.1.0"
description = "A Python SDK for the Scrape.do API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "svdC1", email = "svdc1mail@gmail.com" }
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "respx",
    "mypy",
    "ruff"
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-autorefs",
    "black"
    ]

[tool.setuptools.packages.find]
where = ["src"]