[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-do-python"
version = "0.2.0"
description = "A Python SDK for the Scrape.do API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "svdC1", email = "svdc1mail@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]

[project.urls]
Documentation = "https://svdc1.github.io/scrape-do-python"
Repository = "https://github.com/svdC1/scrape-do-python"
Issues = "https://github.com/svdC1/scrape-do-python/issues"
Changelog = "https://github.com/svdC1/scrape-do-python/blob/main/.github/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "respx",
    "mypy",
    "ruff"
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-autorefs",
    "black"
    ]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scrape_do = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
branch = true
source = ["scrape_do"]
relative_files = true

[tool.coverage.paths]
source = [
    "src/scrape_do",
    "*/site-packages/scrape_do",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.setuptools.package_data]
"scrape_do.data" = ["*"]
